# erp-reloaded

./: .coveragerc  .flake8  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: push.yml
customer/: admin.py  forms.py  models.py  urls.py  views.py
customer/migrations/: 0001_initial.py  0002_auto_20200301_1424.py  0003_auto_20200301_1426.py  0004_auto_20200301_1435.py  0005_auto_20200301_1448.py  0006_country_value_added_tax.py  0007_customer_logo.py  0008_contact.py  0009_auto_20200301_1857.py  0010_auto_20200301_1858.py  0011_exchange.py  0012_auto_20200305_2000.py  0013_auto_20200305_2058.py
customer/templatetags/: extras.py
erp_reloaded/: asgi.py  celery.py  forms.py  urls.py  wsgi.py
erp_reloaded/mixins/: models.py
erp_reloaded/settings/: base.py  dev.py  test.py
fixtures/: DocumentName.json
scripts/: lint.sh  run-tests.sh
templates/: base.html  navbar.html
templates/customer/: base.html  create.html  list.html  menu.html  show.html
templates/form/: search.html
templates/user/: base.html  detail.html  list-active.html  list-archive.html  me.html  show.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_photo.py  0003_auto_20200229_1805.py  0004_document_documentname.py  0005_document_file.py  0006_documentname_icon.py  0007_auto_20200229_2128.py  0008_user_date_left.py  0009_user_biography.py  0010_auto_20200301_0145.py
(+22 files in other folders)
