[tool.poetry]
name = "erp-reloaded"
version = "0.1.0"
description = "A full Django 3.0 ERP software"
authors = ["Martin Lehoux <martin@lehoux.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
