[tool.poetry]
name = "erp-reloaded"
version = "0.1.0"
description = "A full Django 3.0 ERP software"
authors = ["Martin Lehoux <martin@lehoux.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.9"
django-filter = "^2.2.0"
Pillow = "^7.0.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^4.0.0"}
django-redis-cache = "^2.1.0"
django-cleanup = "^4.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
django-debug-toolbar = "^2.2"
ipython = "^7.13.0"
isort = "^4.3.21"
pytest = "^5.3.5"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
